test/tests/stages/9_functions/valid/libraries/no_function_calls/division.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[52]:
  int
  identifier(f)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  ,
  int
  identifier(d)
  )
  {
  int
  identifier(x)
  =
  identifier(a)
  /
  identifier(b)
  ;
  if
  (
  identifier(a)
  ==
  const int(10)
  &&
  identifier(b)
  ==
  const int(2)
  &&
  identifier(c)
  ==
  const int(100)
  &&
  identifier(d)
  ==
  const int(4)
  &&
  identifier(x)
  ==
  const int(5)
  )
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
