test/tests/stages/9_functions/invalid_parse/unclosed_paren_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  {
  return
  const int(0)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
